Changes since v2.4.0 "Chimera"
------------------------------
* Tests now correctly consider the configures Curve and Num implementation (GitHub Issue #1).
* Our current TFA AB burst reduction implementation is only applicable to TB arrivals.
  - We now skip reducing the reduction for arrival curves with >2 segments.
* Code and comment cleanups.

v2.4.0 "Chimera" (2018-Mar-18)
------------------------------
* Maven build system
  - Reworked the source folders to src/main/java and src/test/java.
  - Added pom.xml
  - Attention: You need to add the MPA toolbox manually:
     - download it RTCToolbox_bin.zip at http://www.mpa.ethz.ch/Rtctoolbox/Download
     - unzip it, and put the file RTCToolbox/rtc/rtc.jar into the DiscoDNC's lib folder.
  - Removed Ant files
* New domain discodnc.cs.uni-kl.de
  - Includes a new webpage.
  - Package prefixes have been renamed to de.uni_kl.cs.discondc.
* All the changes of betas 1 to 4.
  - Attention: Although all tests succeed with the rtc curve backend, it is considered a beta feature. 
* Static analysis update: switched from obsolete FindBugs to its successor SpotBugs.
  - Fixed EQ_CHECK_FOR_OPERAND_NOT_COMPATIBLE_WITH_THIS in LinearSegment_MPARTC_PwAffine.
  - Fixed RV_RETURN_VALUE_IGNORED_BAD_PRACTICE in Network.
* Reworked storing a network to the file system.
* Removed broken OutputTest.
* Code cleanups.
  - Moved preliminary code to dispatch to different DNC bounding implementations to comments.

v2.4.0beta4 "Chimera" (2017-Dec-23)
-----------------------------------
* Attention: The DiscoDNC does not yet fully work with Java 9. Compiler compliance level 1.8 is required.
  - Thanks to Zoltán Mátyás for pointing this out.
* Tests are all ported to JUnit5.
* Check the classpath for rtc.jar instead of using a hardcoded location (patch by Zoltán Mátyás). 
* DNC bounds derived from two curves (i.e., other than arrival bound algorithms)
  - package renamed from de.uni_kl.cs.disco.nc.operations to de.uni_kl.cs.disco.nc.bounds